# camera_robot_calibration

./: CMakeLists.txt  README.md  marker_cal.launch  package.xml
data/: camera_param.ini  camera_param.xml~  camera_param_baxter.xml  camera_param_crustcrawler.xml  sanchez_transform
include/: calibration_helpers_methods.hpp  calibration_parameters.hpp  camera_robot_calibration.hpp  helpers_methods.hpp  parameters.hpp
include/camera_robot_calibration/: camera_robot_calibration.hpp  helpers_methods.hpp  parameters.hpp
src/: auto_cal_leni_method.cpp  automatic_calibration.cpp  baxter_kinect_transformation_mat.cpp  camera_robot_calibration.cpp  contour_detection.cpp  crustcrawler_kinect_transformation_mat.cpp  get_rotate_quat.cpp  image_convert.cpp  marker_detection.cpp  shape_detection.cpp  template_matching.cpp
src/libs/: helpers_methods.cpp
