<?xml version="1.0"?>
<package>
  <name>camera_robot_calibration</name>
  <version>0.0.0</version>
  <description>The camera_robot_calibration package</description>

  <maintainer email="ghanim@todo.todo">ghanim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rgbd_utils</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>crustcrawler_core_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rgbd_utils</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>crustcrawler_core_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
